<resources>

    <string name="app_name">AppOrganizador</string>

    <string name="organizador_de_pertenencias">Organizador de Pertenencias</string>

    <string name="por_favor_introduzca_sus_credenciales">Por favor, introduzca sus Credenciales</string>

    <string name="identificador_mail">Identificador (e-mail)</string>

    <string name="contrase_a">Contraseña</string>

    <string name="borrar_campos">Borrar campos</string>

    <string name="acceder">Acceder</string>

    <string name="cerrar_aplicaci_n">Cerrar aplicación</string>

    <string name="crear_nuevo_usuario">Crear Nuevo Usuario</string>

    <string name="nuevo_usuario">Nuevo usuario</string>

    <string name="introduzca_los_datos_para_crear_nuevo_usuario">Por favor, introduzca los datos para crear nuevo usuario</string>

    <string name="identificador_e_mail">Identificador (e-mail)</string>

    <string name="su_nombre">Su nombre</string>

    <string name="contrasena">Contraseña</string>

    <string name="confirmar_contrasena">Confirmar contraseña</string>

    <string name="boton_borrar_campos">Borrar campos</string>

    <string name="boton_aceptar">Aceptar</string>

    <string name="boton_volver">Volver</string>

    <string name="seleccione_una_opcion">Seleccione una opción</string>

    <string name="boton_mis_ubicaciones">Mis Ubicaciones</string>

    <string name="boton_mis_pertenencias">Mis Pertenencias</string>

    <string name="boton_mi_maleta">Mi Maleta</string>

    <string name="boton_cerrar_sesion">Cerrar Sesión</string>

    <string name="detalle_de_ubicacion">Detalle de Ubicación</string>

    <string name="nombre_de_la_ubicacion">Nombre de la ubicación:</string>

    <string name="descripcion_de_la_ubicacion">Descripción de la Ubicación:</string>

    <string name="categorias">Listado de Categorías</string>

    <string name="listado_de_ubicaciones">Listado de Ubicaciones</string>

    <string name="detalle_de_categorIa">Detalle de Categoría</string>

    <string name="nombre_de_la_categorIa">Nombre de la Categoría:</string>

    <string name="descripciOn_de_la_categorIa">Descripción de la Categoría:</string>

    <string name="detalle_de_pertenencia">Detalle de Pertenencia</string>

    <string name="nombre_de_la_pertenencia">Nombre de la Pertenencia:</string>

    <string name="detalle_de_la_pertenencia">Detalle de la Pertenencia:</string>

    <string name="categor_a_de_la_pertenencia">Categoría de la Pertenencia:</string>

    <string name="ubicaci_n_actual">Ubicación actual:</string>

    <string name="editar_categoria">Editar Categoría</string>

    <string name="nombre_de_la_categoria">Nombre de la categoría:</string>

    <string name="introduzca_nuevo_nombre">Introduzca nuevo nombre:</string>

    <string name="opcional_descripci_n_de_la_categoria">(Opcional) Descripción de la categoría:</string>

    <string name="introduzca_nueva_descripci_n">Introduzca nueva descripción:</string>

    <string name="borrarcampos1">Borrar Campos</string>

    <string name="editar_pertenencia">Editar Pertenencia</string>

    <string name="nombre_de_la_pertenencia1">Nombre de la pertenencia:</string>

    <string name="introduzca_nuevo_nombre1">Introduzca nuevo nombre:</string>

    <string name="opcional_detalle_de_la_pertenencia_m_x_100_caracteres1">(Opcional) Detalle de la Pertenencia, máx. 100 caracteres</string>

    <string name="introduzca_nuevo_detalle">Introduzca nuevo detalle:</string>

    <string name="categor_a_de_la_pertenencia1">Categoría de la pertenencia:</string>

    <string name="ubicaci_n_de_la_pertenencia">Ubicación de la pertenencia:</string>

    <string name="borrar_campos2">Borrar campos</string>

    <string name="seleccione_categor_a">Seleccione categoría:</string>

</resources>
