<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/match_match"
    tools:context=".MostrarPertenenciaActivity">

    <RelativeLayout
        style="@style/match_match">

        <TextView
            android:id="@+id/mostrar_pert_titulo"
            style="@style/estilo_comun_textos"
            android:textSize = "40sp"
            android:textAlignment = "center"
            android:text="@string/detalle_de_pertenencia" />

        <ImageView
            android:id="@+id/mostrar_pert_icono_ayuda"
            style="@style/estilo_ayuda"
            android:layout_below="@+id/mostrar_pert_titulo"/>

        <LinearLayout
            android:id="@+id/mostrar_pert_grupo_cajas"
            style="@style/estilo_linear_cajas"
            android:layout_below="@+id/mostrar_pert_icono_ayuda">

            <TextView
                style="@style/estilo_etiquetas"
                android:text="@string/nombre_de_la_pertenencia"/>

            <TextView
                android:id="@+id/mostrar_pert_caja_nombre"
                style="@style/estilo_etiquetas_contenido" />

            <TextView
                style="@style/estilo_etiquetas"
                android:text="@string/detalle_de_la_pertenencia"/>

            <TextView
                android:id="@+id/mostrar_pert_caja_detalle"
                style="@style/estilo_etiquetas_contenido" />

            <TextView
                style="@style/estilo_etiquetas"
                android:layout_marginTop="10dp"
                android:text="@string/categor_a_de_la_pertenencia"/>

            <TextView
                android:id="@+id/mostrar_pert_caja_cat"
                style="@style/estilo_etiquetas_contenido"/>

            <TextView
                style="@style/estilo_etiquetas"
                android:text="@string/ubicaci_n_actual" />

            <TextView
                android:id="@+id/mostrar_pert_caja_ubic"
                style="@style/estilo_etiquetas_contenido"
                android:layout_marginBottom="40dp"/>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>